cleaned up reminder on home page

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="%sveltekit.assets%/main.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="HistorySaber.com is your go-to platform for tracking and analyzing historical Beat Saber scores, rankings, and player stats from ScoreSaber. Explore past performances, monitor player progress over time, and dive deep into the competitive Beat Saber scene with detailed insights and country-based leaderboards. Whether you're a casual rhythm gamer or a competitive player, History Saber helps you stay informed and ahead.">
+		<meta name="description" content="HistorySaber.com is your go-to platform for tracking and analyzing historical Beat Saber scores, rankings, and player stats from ScoreSaber. History Saber lets you explore past performances, monitor player progress over time, and dive deep into the competitive Beat Saber scene with detailed insights and country-based leaderboards. Whether you're a casual rhythm gamer or a competitive player, History Saber helps you stay informed and ahead.">
 		<meta name="robots" content="index, follow">
 		<style>
 			body {
