--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="HistorySaber.com is your go-to platform for tracking and analyzing historical Beat Saber scores, rankings, and player stats from ScoreSaber. History Saber lets you explore past performances, monitor player progress over time, and dive deep into the competitive Beat Saber scene with detailed insights and country-based leaderboards. Whether you're a casual rhythm gamer or a competitive player, History Saber helps you stay informed and ahead.">
 		<meta charset="utf-8" />
 		<script async defer data-website-id="61d67539-1641-4e28-893c-3ddda6641e5f" src="/analytics.js"></script> 
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
+		<link defer href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="%sveltekit.assets%/main.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
